Added link to home page on logos in the header of each page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,17 +2,77 @@
     "cSpell.words": [
         "Airforce",
         "Airmax",
+        "Corporis",
         "Cortez",
+        "Dolore",
+        "Doloremque",
+        "Dolorum",
         "Dunlope",
         "Hightop",
+        "Quidem",
         "Rebok",
+        "Rerum",
         "Tiempo",
+        "adipisicing",
         "airmaxthea",
+        "amet",
+        "architecto",
+        "assumenda",
+        "atque",
+        "beatae",
         "cammo",
+        "consectetur",
+        "cupiditate",
+        "delectus",
+        "deserunt",
+        "distinctio",
+        "doloribus",
+        "elit",
+        "eveniet",
+        "expedita",
+        "facere",
+        "facilis",
         "flyknit",
+        "fugiat",
+        "illum",
+        "incidunt",
+        "iste",
+        "iure",
+        "laborum",
         "latrainer",
+        "laudantium",
+        "magnam",
+        "magni",
+        "maiores",
+        "mollitia",
+        "necessitatibus",
+        "neque",
+        "nesciunt",
+        "nobis",
+        "nulla",
+        "odit",
+        "officia",
+        "officiis",
+        "pariatur",
+        "praesentium",
         "preconnect",
+        "quaerat",
+        "quas",
+        "repellendus",
+        "saepe",
+        "sapiente",
+        "silverhand",
         "silverhanduk",
+        "similique",
+        "suscipit",
+        "tempora",
+        "tenetur",
+        "totam",
+        "velit",
+        "vero",
+        "voluptas",
+        "voluptates",
+        "voluptatum",
         "zxflux"
     ]
 }
