Added google analytics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Rebok",
         "Rerum",
         "Tiempo",
+        "adipisci",
         "adipisicing",
         "airmaxthea",
         "amet",
@@ -22,6 +23,7 @@
         "beatae",
         "cammo",
         "consectetur",
+        "consequatur",
         "cupiditate",
         "delectus",
         "deserunt",
@@ -29,6 +31,7 @@
         "doloribus",
         "elit",
         "eveniet",
+        "exercitationem",
         "expedita",
         "facere",
         "facilis",
@@ -54,23 +57,36 @@
         "officia",
         "officiis",
         "pariatur",
+        "perferendis",
+        "perspiciatis",
+        "placeat",
+        "possimus",
         "praesentium",
         "preconnect",
         "quaerat",
         "quas",
+        "quis",
+        "ratione",
         "repellendus",
         "saepe",
         "sapiente",
+        "sequi",
         "silverhand",
         "silverhanduk",
         "similique",
+        "soluta",
         "suscipit",
         "tempora",
         "tenetur",
         "totam",
+        "ullam",
+        "unde",
         "velit",
+        "veritatis",
         "vero",
         "voluptas",
+        "voluptate",
+        "voluptatem",
         "voluptates",
         "voluptatum",
         "zxflux"
